[package]
name = "website-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros"] }
serde = { version = "1.0.228", features = ["derive"] }
tower-http = { version = "0.6.8", features = ["cors"] }
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio"]}
anyhow = "1.0.100"
dotenvy = "0.15.7"
ammonia = "4.1.2"


